--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ mark {
 
 .personal-text h6 {
     font-size: 20px;
-    color: #d14e66;
     margin: 0;
     margin-top: 40px;
     padding: 0;
@@ -145,4 +144,143 @@ mark {
     font-size: 14px;
     opacity: .7;
     font-weight: 500 !important;
+}
+
+
+/* education page styles  */
+
+.education-text {
+    padding-left: 20px;
+    margin-right: 15px;
+    text-align: justify;
+}
+
+.education-text h3 {
+    text-transform: uppercase;
+    font-size: 30px;
+    color: #333;
+    margin: 0;
+    margin-top: 7px;
+    line-height: 18px;
+    font-weight: 1000;
+    margin-bottom: 40px;
+}
+
+.timeline {
+    border-left: 3px solid rgb(180, 216, 233);
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+    background: #e6e1e1;
+    margin: 0 auto;
+    letter-spacing: 0.2px;
+    position: relative;
+    line-height: 1.4em;
+    font-size: 1.03em;
+    padding: 50px;
+    list-style: none;
+    text-align: left;
+    width: 70%;
+}
+
+@media (max-width: 767px) {
+    .timeline {
+        max-width: 98%;
+        padding: 20px;
+    }
+}
+
+.timeline h1 {
+    font-weight: 300;
+    font-size: 1.4em;
+}
+
+.timeline h2,
+.timeline h3 {
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+
+.timeline .event {
+    border-bottom: 1px dashed #e8ebf1;
+    padding-bottom: 8px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+@media (max-width: 767px) {
+    .timeline .event {
+        padding-top: 30px;
+    }
+}
+
+.timeline .event:last-of-type {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border: none;
+}
+
+.timeline .event:before,
+.timeline .event:after {
+    position: absolute;
+    display: block;
+    top: 0;
+}
+
+.timeline .event:before {
+    left: -207px;
+    content: attr(data-date);
+    text-align: right;
+    font-weight: 100;
+    font-size: 0.9em;
+    min-width: 140px;
+}
+
+@media (max-width: 767px) {
+    .timeline .event:before {
+        left: 0px;
+        text-align: left;
+    }
+}
+
+.timeline .event:after {
+    -webkit-box-shadow: 0 0 0 3px rgb(180, 216, 233);
+    box-shadow: 0 0 0 3px rgb(180, 216, 233);
+    left: -55.8px;
+    background: #fff;
+    border-radius: 50%;
+    height: 9px;
+    width: 9px;
+    content: "";
+    top: 5px;
+}
+
+@media (max-width: 767px) {
+    .timeline .event:after {
+        left: -31.8px;
+    }
+}
+
+.rtl .timeline {
+    border-left: 0;
+    text-align: right;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    border-right: 3px solid rgb(180, 216, 233);
+}
+
+.rtl .timeline .event::before {
+    left: 0;
+    right: -170px;
+}
+
+.rtl .timeline .event::after {
+    left: 0;
+    right: -55.8px;
+}
+
+#add-ed {
+    padding-top: 40px;
 }
