--- a/style.css
+++ b/style.css
@@ -12,13 +12,18 @@ a {
 .visit-card {
     background-color: whitesmoke;
     padding: 20px;
+    padding-bottom: 40px;
     margin-left: 40px;
     margin-right: 40px;
     margin-top: 20px;
     min-height: 450px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
     display: flex;
     justify-content: space-between;
+}
+
+.visit-card h4 {
+    color: #333
 }
 
 .profile-pic {
@@ -162,19 +167,22 @@ mark {
 }
 
 .timeline {
-    border-left: 3px solid rgb(180, 216, 233);
+    border-left: 4px solid rgb(180, 216, 233);
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
     background: #e6e1e1;
     margin: 0 auto;
     letter-spacing: 0.2px;
     position: relative;
-    line-height: 1.4em;
-    font-size: 1.03em;
-    padding: 50px;
+    line-height: 1.3em;
+    font-size: 1.0em;
+    padding-right: 80px;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     list-style: none;
     text-align: left;
-    width: 70%;
+    width: 75%;
 }
 
 @media (max-width: 767px) {
@@ -274,6 +282,6 @@ mark {
     right: -55.8px;
 }
 
-#add-ed {
+.add-ed {
     padding-top: 40px;
 }
