--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ a {
 .personal-text {
     margin-left: 40px;
     line-height: 1.5;
-    /* font-family: unset; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -155,17 +154,6 @@ mark {
     text-align: justify;
 }
 
-.education-text h3 {
-    text-transform: uppercase;
-    font-size: 30px;
-    color: #333;
-    margin: 0;
-    margin-top: 7px;
-    line-height: 18px;
-    font-weight: 1000;
-    margin-bottom: 30px;
-}
-
 .timeline {
     border-left: 4px solid rgb(180, 216, 233);
     border-bottom-right-radius: 4px;
@@ -185,36 +173,11 @@ mark {
     width: 75%;
 }
 
-@media (max-width: 767px) {
-    .timeline {
-        max-width: 98%;
-        padding: 10px;
-    }
-}
-
-.timeline h1 {
-    font-weight: 300;
-    font-size: 1.4em;
-}
-
-.timeline h2,
-.timeline h3 {
-    font-weight: 600;
-    font-size: 1rem;
-    margin-bottom: 10px;
-}
-
 .timeline .event {
     border-bottom: 1px dashed #e8ebf1;
     padding-bottom: 4px;
     margin-bottom: 20px;
     position: relative;
-}
-
-@media (max-width: 767px) {
-    .timeline .event {
-        padding-top: 30px;
-    }
 }
 
 .timeline .event:last-of-type {
@@ -239,13 +202,6 @@ mark {
     min-width: 140px;
 }
 
-@media (max-width: 767px) {
-    .timeline .event:before {
-        left: 0px;
-        text-align: left;
-    }
-}
-
 .timeline .event:after {
     -webkit-box-shadow: 0 0 0 3px rgb(180, 216, 233);
     box-shadow: 0 0 0 3px rgb(180, 216, 233);
@@ -256,12 +212,6 @@ mark {
     width: 9px;
     content: "";
     top: 5px;
-}
-
-@media (max-width: 767px) {
-    .timeline .event:after {
-        left: -31.8px;
-    }
 }
 
 .rtl .timeline {
@@ -285,6 +235,12 @@ mark {
 
 /* styles on the headers for cv */
 
-.add-ed {
+#first-header {
+    padding-top: 0;
+}
+
+.headers {
     padding-top: 40px;
+    font-size: 20px;
+    color: #333;
 }
