--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ mark {
 }
 
 .headers h3 {
-    padding-top: 40px;
+    padding-top: 40px !important;
     font-size: 20px !important;
     color: #333;
 }
