--- a/style.css
+++ b/style.css
@@ -255,4 +255,5 @@ mark {
     padding-top: 40px !important;
     font-size: 20px !important;
     color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
