--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     padding: 0;
     background-color: #e6e1e1;
     font-family: Arial, Helvetica, sans-serif !important;
+    font-weight: normal;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
 }
 
 a {
